# src/controllers/auths.control.ts
@@ -1,20 +1,29 @@
 import { Request, Response } from 'express';
 import bcrypt from 'bcrypt';
+import Jwt  from 'jsonwebtoken';
 import User from './../models/user.model';
 import { config } from './../config/index';
 import CustomResponse from './../utils/custom.response';
 import passwordRules from './../utils/password.check';
-import { generateOTP } from './../services/otp.generator';
-import { sendEmail } from './../services/email.service';
+import { generateOTP, isEmailValid, isOTPExpired, isValidOTP } from '../utils/otp.generator';
+import { sendResetPasswordOTP, sendVerificationEmail } from '../services/email/email.service';
 
 const JWT_SECRET = config.jwtSecret;
 if (!JWT_SECRET) throw new Error('JWT_SECRET is not defined');
+
+const JWT_REFRESH_SECRET = config.jwtRefreshSecret;
+if (!JWT_REFRESH_SECRET) throw new Error('JWT_REFRESH_SECRET is not defined');
 
 /**
  * Create a new user (admin or customer)
  */
 export const createUser = async (req: Request, res: Response): Promise<void> => {
   const { email, password, confirmPassword, isAdmin, isAgent, isCustomer, isActive } = req.body;
+
+  if (!isEmailValid(email)) {
+    CustomResponse.errorResponse(res, 'Invalid email format', 400, []);
+    return;
+  }
 
   if (!passwordRules.test(password)) {
     CustomResponse.errorResponse(
@@ -39,7 +48,6 @@ export const createUser = async (req: Request, res: Response): Promise<void> => 
     }
 
     const hashedPassword = await bcrypt.hash(password, 10);
-
     const otp = generateOTP();
     const otpExpires = new Date(Date.now() + 10 * 60 * 1000); // OTP valid for 10 mins
 
@@ -55,10 +63,22 @@ export const createUser = async (req: Request, res: Response): Promise<void> => 
     });
 
     // Send OTP via email
-    await sendEmail({
-      to: email,
-      subject: 'Your OTP Code',
-      text: `Your OTP code is ${otp}. It will expire in 10 minutes.`,
+    await sendVerificationEmail(email, otp);
+
+    // Generate JWT tokens
+    // Access token valid for 1 day, refresh token valid for 7 days
+    const accessToken = Jwt.sign({ id: newUser.id }, JWT_SECRET!, {
+      expiresIn: '1d'
+    });
+    const refreshToken = Jwt.sign({ id: newUser.id }, JWT_REFRESH_SECRET!, {
+      expiresIn: '7d'
+    });
+
+    res.cookie('refreshToken', refreshToken, {
+      httpOnly: true,
+      secure: true, // Use secure cookies in production
+      sameSite: 'strict', // Prevent CSRF attacks,
+      maxAge: 7 * 24 * 60 * 60 * 1000, // 7 days
     });
 
     CustomResponse.successResponse(res, 'User created successfully. OTP sent to email.', 201, {
@@ -70,6 +90,8 @@ export const createUser = async (req: Request, res: Response): Promise<void> => 
         isCustomer: newUser.isCustomer,
         isActive: newUser.isActive,
       },
+      accessToken: accessToken,
+      refreshToken: refreshToken,
     });
   } catch (error: any) {
     CustomResponse.errorResponse(res, `Server Error: ${error.message || error}`, 500, []);
@@ -93,8 +115,8 @@ export const resendOTP = async (req: Request, res: Response): Promise<void> => {
       return;
     }
 
-    if (!user.isVerified) {
-      CustomResponse.errorResponse(res, 'User has been verified', 404, {});
+    if (user.isVerified) {
+      CustomResponse.errorResponse(res, 'User has already been verified', 400, {});
       return;
     }
 
@@ -105,14 +127,10 @@ export const resendOTP = async (req: Request, res: Response): Promise<void> => {
     user.otpExpires = otpExpires;
     await user.save();
 
-    await sendEmail({
-        to: email,
-        subject: 'Your OTP Code',
-        text: `Your OTP code is ${otp}. It will expire in 10 minutes.`,
-      });
+    await sendVerificationEmail(email, otp);
+    
     CustomResponse.successResponse(res, 'OTP sent successfully', 200, {
-      email,
-      otpExpires,
+      email: email,
     });
   }
   catch (error) {
@@ -121,56 +139,8 @@ export const resendOTP = async (req: Request, res: Response): Promise<void> => {
   }
 };
 
-/**
- * Verify OTP endpoint
- */
-export const verifyOtp = async (req: Request, res: Response): Promise<void> => {
-  const { email, otp } = req.body;
-
-  try {
-    const user = await User.findOne({ where: { email } });
-
-    if (!email || !otp) {
-      CustomResponse.errorResponse(res, 'Email and OTP are required', 400, {});
-      return;
-    }
-    
-
-    if (!user || !user.otp || !user.otpExpires) {
-      CustomResponse.errorResponse(res, 'Invalid request', 404, {});
-      return;
-    }
-
-    if (user.otp !== otp) {
-      CustomResponse.errorResponse(res, 'Invalid OTP', 400, {});
-      return;
-    }
-
-    if (user.otpExpires < new Date()) {
-      CustomResponse.errorResponse(res, 'OTP has expired', 400, {});
-      return;
-    }
-
-    // OTP is valid, clear it
-    user.otp = null;
-    user.otpExpires = null;
-    user.isVerified = true; // Mark user as verified
-    await user.save();
-
-    CustomResponse.successResponse(res, 'OTP verified successfully', 200, {});
-    return;
-  } catch (error) {
-    CustomResponse.errorResponse(res, `Server Error: ${error}`, 500, {});
-    return;
-  }
-};
-
-/**
- * Forget password section with OTP sending and verification
- * This endpoint allows a user to change their password using an OTP sent to their email.
- * Below is the implementation of sending an OTP for password changing.
- */
-export const sendOtpForPasswordChanging = async (req: Request, res: Response): Promise<void> => {
+/* Send OTP for password verification */
+export const OTPForPasswordReset = async (req: Request, res: Response): Promise<void> => {
   const { email } = req.body;
 
   try {
@@ -193,17 +163,58 @@ export const sendOtpForPasswordChanging = async (req: Request, res: Response): P
     user.otpExpires = otpExpires;
     await user.save();
 
-    await sendEmail({
-        to: email,
-        subject: 'Your OTP Code',
-        text: `Your OTP code is ${otp}. It will expire in 10 minutes.`,
-      });
+    await sendResetPasswordOTP(email, otp);
+
+    
     CustomResponse.successResponse(res, 'OTP sent successfully', 200, {
-      email,
-      otpExpires,
+      email: email
     });
   }
   catch (error) {
+    CustomResponse.errorResponse(res, `Server Error: ${error}`, 500, {});
+    return;
+  }
+};
+
+/**
+ * Verify OTP endpoint
+ */
+export const verifyOtp = async (req: Request, res: Response): Promise<void> => {
+  const { email, otp } = req.body;
+
+  try {
+
+    if (!email || !otp) {
+      CustomResponse.errorResponse(res, 'Email and OTP are required', 400, {});
+      return;
+    } 
+    
+    const user = await User.findOne({ where: { email } });
+
+    if (!user || !user.otp || !user.otpExpires) {
+      CustomResponse.errorResponse(res, 'Invalid OTP or user not found', 404, {});
+      return;
+    }
+
+    if (!isValidOTP(otp, user.otp)) {
+      CustomResponse.errorResponse(res, 'Invalid OTP', 400, {});
+      return;
+    }
+
+   if (isOTPExpired(user.otpExpires)) {
+      CustomResponse.errorResponse(res, 'OTP has expired', 400, {});
+      return;
+    }
+
+    // OTP is valid, clear it
+    user.otp = null;
+    user.otpExpires = null;
+    user.isVerified = true; // Mark user as verified
+    await user.save();
+
+    CustomResponse.successResponse(res, 'OTP verified successfully', 200, {email: user.email});
+    return;
+  } catch (error) {
     CustomResponse.errorResponse(res, `Server Error: ${error}`, 500, {});
     return;
   }
@@ -218,14 +229,9 @@ export const changePassword = async (req: Request, res: Response): Promise<void>
 
   try {
 
-    if (!email || !newPassword || !confirmNewPassword) {
-      CustomResponse.errorResponse(res, 'All fields are required', 400, []);
-      return;
-    }
-
     const user = await User.findOne({ where: { email } });
 
-    if (!user  || !user.otpExpires || user.otpExpires < new Date()) {
+    if (!user) {
       CustomResponse.errorResponse(res, 'Invalid request', 404, {});
       return;
     }
@@ -245,6 +251,12 @@ export const changePassword = async (req: Request, res: Response): Promise<void>
       return;
     }
 
+    const isSame = await bcrypt.compare(newPassword, user.password);
+    if (isSame) {
+      CustomResponse.errorResponse(res, 'You cannot reuse your previous password', 400, []);
+      return;
+    }
+
     // Hash the new password
     const hashedPassword = await bcrypt.hash(newPassword, 10);
     user.password = hashedPassword;
@@ -255,5 +267,16 @@ export const changePassword = async (req: Request, res: Response): Promise<void>
   } catch (error) { 
     CustomResponse.errorResponse(res, `Server Error: ${error}`, 500, {});
     return;
+  }
+};
+
+/* This Endpoint Logout User */
+export const logoutUser = async (req: Request, res: Response): Promise<void> => {
+  try {
+    // Clear the refresh token cookie
+    res.clearCookie('refreshToken', { httpOnly: true, sameSite: 'strict', secure: true });
+    CustomResponse.successResponse(res, 'Logged out successfully', 200, {});
+  } catch (error) {
+    CustomResponse.errorResponse(res, `Server Error: ${error}`, 500, {});
   }
 };
