# src/docs/swagger.json
@@ -8,7 +8,25 @@
   "servers": [
     {
       "url": "https://bridgeedge-backend-dev.onrender.com",
-      "description": ""
+      "description": "Production server"
+    },
+    {
+      "url": "http://localhost:5000",
+      "description": "Local development server"
+    }
+  ],
+  "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
+    }
+  },
+  "security": [
+    {
+      "bearerAuth": []
     }
   ],
   "paths": {
@@ -25,6 +43,7 @@
     "/api/auth/register": {
       "post": {
         "summary": "Register a new user",
+        "tags": ["Auth"],
         "requestBody": {
           "required": true,
           "content": {
@@ -35,9 +54,9 @@
                   "email": { "type": "string" },
                   "password": { "type": "string" },
                   "confirmPassword": { "type": "string" },
-                  "isAdmin": { "type": "boolean" },
-                  "isAgent": { "type": "boolean" },
-                  "isCustomer": { "type": "boolean" },
+                  "isAdmin": { "type": "boolean", "default": false},
+                  "isAgent": { "type": "boolean", "default": false},
+                  "isCustomer": { "type": "boolean", "default": false},
                   "isActive": { "type": "boolean" }
                 },
                 "required": ["email", "password", "confirmPassword"]
@@ -77,6 +96,7 @@
     "/api/auth/resend-otp": {
       "post": {
         "summary": "Resend OTP for verification",
+        "tags": ["Auth"],
         "requestBody":{
           "required": true,
           "content": {
@@ -86,14 +106,25 @@
                 "properties": {
                   "email": { "type": "string" }
                 },
-                "required": ["email", "otp"]
+                "required": ["email"]
               }
             }
           }
         },
         "responses": {
           "200": {
-            "description": "OTP sent to your email"
+            "description": "OTP sent successful",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "otp": { "type": "string" },
+                    "otpExpires": { "type": "string", "format": "date-time" }
+                  }
+                }
+              }
+            }
           },
           "404": {
             "description": "User not found"
@@ -104,6 +135,7 @@
     "/api/auth/admin-login": {
       "post": {
         "summary": "Login a user",
+        "tags": ["Admin"],
         "requestBody": {
           "required": true,
           "content": {
@@ -142,63 +174,10 @@
         }
       }
     },
-    "/api/auth/verify-otp": {
+    "/api/auth/otp-for-password-reset": {
       "post": {
-        "summary": "Verify OTP for account confirmation",
-        "description": "Verifies a user's OTP to confirm their email or account. If valid and not expired, the OTP is cleared and the user is marked as verified.",
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "email": {
-                    "type": "string",
-                    "example": "user@example.com"
-                  },
-                  "otp": {
-                    "type": "string",
-                    "example": "123456"
-                  }
-                },
-                "required": ["email", "otp"]
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "OTP verified successfully",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "message": {
-                      "type": "string",
-                      "example": "OTP verified successfully"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request - missing fields, invalid or expired OTP"
-          },
-          "404": {
-            "description": "User not found or OTP record missing"
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        }
-      }
-    },
-    "/api/auth/send-otp-for-password-changing": {
-      "post": {
-        "summary": "Send OTP for changing password",
+        "summary": "Request OTP for password reset",
+        "tags": ["Auth"],
         "requestBody": {
           "required": true,
           "content": {
@@ -215,7 +194,52 @@
         },
         "responses": {
           "200": {
-            "description": "OTP sent to your email"
+            "description": "OTP sent successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "otpExpires": { "type": "string", "format": "date-time" }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "User not found"
+          }
+        }
+      }
+    },
+    "/api/auth/verify-otp": {
+      "post": {
+        "summary": "Verify OTP for password reset",
+        "tags": ["Auth"],
+        "security": [
+            { "bearerAuth": [] }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "email": { "type": "string" },
+                  "otp": { "type": "string" }
+                },
+                "required": ["email", "otp"]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OTP verified successfully"
+          },
+          "400": {
+            "description": "Invalid OTP"
           },
           "404": {
             "description": "User not found"
@@ -225,8 +249,11 @@
     },
     "/api/auth/change-password": {
       "post": {
-        "summary": "Change user password",
-        "description": "Allows a user to change their password by providing their email, new password, and confirming the new password. The OTP field is not required or used in this endpoint.",
+        "summary": "Reset user password",
+        "tags": ["Auth"],
+        "security": [
+            { "bearerAuth": [] }
+        ],
         "requestBody": {
           "required": true,
           "content": {
@@ -234,57 +261,42 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "email": { 
-                    "type": "string", 
-                    "example": "user@example.com"
-                  },
-                  "newPassword": { 
-                    "type": "string", 
-                    "example": "NewPassw0rd!" 
-                  },
-                  "confirmNewPassword": { 
-                    "type": "string", 
-                    "example": "NewPassw0rd!" 
-                  }
+                  "email": { "type": "string" },
+                  "newPassword": { "type": "string" },
+                  "confirmNewPassword": { "type": "string" }
                 },
-                "required": ["email", "newPassword", "confirmNewPassword"]
+                "required": ["newPassword", "confirmNewPassword"]
               }
             }
           }
         },
         "responses": {
           "200": {
-            "description": "Password reset successfully",
+            "description": "Password has been changed successful",
             "content": {
               "application/json": {
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "message": { 
-                      "type": "string", 
-                      "example": "Password reset successfully" 
-                    }
+                    "email": { "email": "string" }
                   }
                 }
               }
             }
           },
           "400": {
-            "description": "Bad Request - e.g., missing fields, password mismatch, or weak password"
+            "description": "Invalid input or password mismatch"
           },
           "404": {
-            "description": "User not found or OTP expired"
-          },
-          "500": {
-            "description": "Internal server error"
+            "description": "User not found"
           }
         }
       }
-    },    
-
+    },
     "/api/auth/change-password-logged-in-user": {
       "post": {
         "summary": "Reset user password while user is logged in",
+        "tags": ["Auth"],
         "security": [
             { "bearerAuth": [] }
         ],
@@ -323,6 +335,23 @@
           },
           "404": {
             "description": "User not found"
+          }
+        }
+      }
+    },
+    "/api/auth/logout": {
+      "post": {
+        "summary": "Logout user",
+        "tags": ["Auth"],
+        "security": [
+            { "bearerAuth": [] }
+        ],
+        "responses": {
+          "200": {
+            "description": "User logged out successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
